# pink-0

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-SW  README.md  install.sh
hardware/: BOM.txt  pink-0.brd  pink-0.cop  pink-0.sch
src/: Audio.cpp  Audio.h  Engine.cpp  Engine.h  Pink.cpp  Pink.h  main.cpp
src/ui/: Font7Seg.h  UserInterface.h  UserInterfaceCHIPPro.cpp  UserInterfaceCHIPPro.h  UserInterfaceNone.h  UserInterfacePiZero.cpp  UserInterfacePiZero.h  UserInterfaceWebSocket.cpp  UserInterfaceWebSocket.h
support/: hostapd.conf
support/boot/: config.txt
support/config/: pink-config.h.in
support/html/: index.html  pink.php
support/html/assets/css/: dhtmlxslider.css  fonts.css  pink.css  siimple.min.css
support/html/assets/js/: dhtmlxslider.js  nmws.min.js  scripts.js
support/init.d/: pink
